--- a/style.css
+++ b/style.css
@@ -7,10 +7,11 @@
 .container {
     background-color: #344a72;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     gap: 20px;
+    height: 100vh;
 }
 
 .btn {
@@ -39,12 +40,23 @@
 }
 
 .decrease-btn {
-    background-color: #FF6347;
+    background-color: #FF4500;
     color: white;
-    border: 2px solid #FF6347;
+    border: 2px solid #FF4500;
 }
 
 .decrease-btn:hover {
+    background-color: white;
+    color: black;
+}
+
+.reset-btn {
+    background-color: #1E90FF;
+    color: white;
+    border: 2px solid #1E90FF;
+}
+
+.reset-btn:hover {
     background-color: white;
     color: black;
 }
@@ -53,5 +65,10 @@
     background-color: White;
     color: #333;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 32px;
+    width: 390px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
